Change docker repo

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,5 +1,5 @@
 {
-  "APP_NAME": "company-x-ui",
+  "APP_NAME": "company-x-ui-a7",
   "About": "About",
   "Hello world !": "Hello world !",
   "Home": "Home",
